# scale-predictor

./: .dockerignore  .gitignore  Dockerfile  README.md  demo.py  environment.yml  inverse_loss.py  main.py  pyproject.toml  requirements.txt  requirements_darts.txt  scale_predictor_output.csv
config/: predictor-service.yaml  predictor.yaml
data/scripts/: distill.py  find_top10.py  generate_train_val_test.py  trim_data.py
models/: 0.lpkl  1.lpkl  10.lpkl  11.lpkl  15.lpkl  17.lpkl  18.lpkl  2.lpkl  21.lpkl  22.lpkl  27.lpkl  29.lpkl  32.lpkl  35.lpkl  40.lpkl  42.lpkl  45.lpkl  49.lpkl  5.lpkl  7.lpkl  global_400_100.pkl  global_400_b10_nhits.pkl  global_400_b10_nhits.pkl.ckpt  global_400_lr.lpkl  global_top10_200.pkl  global_top10_sec.pkl  global_top10_sec.pkl.ckpt
models/50/: 0.lpkl  1.lpkl  12.lpkl  14.lpkl  19.lpkl  24.lpkl  25.lpkl  26.lpkl  3.lpkl  30.lpkl  31.lpkl  37.lpkl  (+7 more)
protos/: scale_predictor.proto
scripts/: CDF.py  CDF_multi.py  edo_400_shift.csv  edo_400_top10.csv  eva.py  eva_utils.py  generate_train_val_test.py  knative_400_top10.csv  lr_400_shift.csv  lr_400_top10.csv  mixed_400+top10.csv  mixed_400.csv  mixed_400_shift.csv  mixed_50_shift.csv  relation.py  relation_multi.py  requirements.txt  train.py  train_NHiTS.py  train_nhits.py  window_average_400_shift.csv
tests/: eva.py  test_evaluate_nhits.py  test_evaluate_window_average.py  test_grpc_client.py  test_linear.py  test_multi_process.py  test_nhits.py  test_predictor.py  train.py
trace_analysis/: estimate_cold_starts
train_client/: 3.out  50_out.csv  go.mod  out.csv  train_client.go
(+279 files in other folders)
